@@ -1,5 +1,6 @@
 Development version (next version)
 - Fix a bug in the pre-processor that would cause issues on Arm GPUs
+- Fix DLL install directory in mingw
 - Added tuned parameters for various devices (see doc/tuning.md)
 
 Version 1.6.1
